# django-datatablesview

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
datatables/: apps.py  datatable.py  datatable_filters.py  utils.py  views.py
datatables/static/datatables/js/: django-datatables.js
datatables/templates/datatables/: _datatable.html  base.html  css.html  datatable.html  export.html  filters.html  js.html  table.html  toggle-columns.html
datatables/templatetags/: datatables.py
example/: admin.py  models.py  settings.py  urls.py  views.py
example/migrations/: 0001_initial.py  0002_auto_20210206_1329.py  0003_person_education.py
example/templates/example/: person_detail.html
